# mini-RAG

./: .env.example  README.md  pyproject.toml
docker/: docker-compose.yml
src/: main.py
src/controllers/: BaseController.py  DataController.py  ProcessController.py  ProjectController.py
src/helpers/: config.py
src/models/: AssetModel.py  BaseDataModel.py  ChunkModel.py  ProjectModel.py  __init__.py
src/models/db_schemas/: asset.py  data_chunk.py  project.py
src/models/enums/: AssetsTypeEnum.py  DatabaseEnum.py  ResponseEnums.py
src/routes/: base.py  data.py
src/routes/schemas/: data.py
