[project]
name = "mini-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==25.1.0",
    "fastapi==0.138.2",
    "pydantic-settings==2.14.2",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "uvicorn[standard]==0.49.0",
]
