[project]
name = "mini-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==25.1.0",
    "fastapi==0.138.2",
    "langchain==1.3.11",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "motor>=3.7.1",
    "pydantic-settings==2.14.2",
    "pymupdf==1.28.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "uvicorn[standard]==0.49.0",
]
